# verticox

./: .gitignore  404.html  CITATION.CFF  Dockerfile  Lz_tests.ipynb  Makefile  README.md  Untitled.ipynb  Verticox.ipynb  Verticox.pptx  \  addresses.md  compare.ipynb  demo.ipynb  docker-compose.yml  generate_grpc.sh  index.html  just_build_test_image.sh  mkdocs.yml  new_results-2024-02-28.txt  objects.inv  plot_benchmarks.ipynb  plot_benchmarks_with_c_index.ipynb  push_test_image.sh  pyproject.toml  regular cox proportional hazards.ipynb  results_benchmark_seer.csv  results_seer_2024-03-07.txt  sitemap.xml  verticox.json
SOAP/: Verticox-soapui-project.xml
Vantage6Wrapper/: Dockerfile  pushF.sh  pushFNoCache.sh  pyproject.toml
api/: index.html
architecture/: index.html
benchmark/: .gitignore  application-datanode1.properties  application-datanode2.properties  application-outcomenode.properties  docker-compose.yml  run_benchmarks.py
benchmark_results/: benchmark_further_optimization.csv  full_benchmark_after_optimization_seer.csv  new_benchmark_original.csv  report-seer_2024-12-04T11:53:46.704684.csv  report-seer_2024-12-04T11_53_46.704684.csv  results_original.csv  results_ours.csv  results_seer_2024-03-06.txt
cert-test/: .gitignore  README.md  add_certs.sh  (+4 more)
python/: .dockerignore  .flake8  Create custom v6 data.ipynb  Dockerfile  Lz_tests.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Verticox.ipynb  clear_tasks.py  compare.ipynb  compare2.ipynb  create_benchmark_config.ipynb  generate_test_data.py  log.txt  online.txt  optimization.ipynb  poetry.lock.bak  prepare data.ipynb  preprocess_data_1.parquet  preprocess_data_2.parquet  preprocess_outcome.parquet  pyproject.toml  regular cox proportional hazards.ipynb  test v6.ipynb  visualize.py
python/benchmark/: .gitignore  README.md  benchmark_parameters.csv  benchmark_src.csv  docker-compose.yml  run_benchmarks.py  run_benchmarks_original.py
python/benchmark/templates/: application-datanode.properties.jinja  docker-compose.yml.jinja
python/notebooks/: test v6.ipynb  test_client.ipynb
python/scripts/: benchmark_find_z.py  visualize.py
python/source/: api.rst  conf.py  index.rst
python/tests/: common.py  test_aggregator.py  test_common.py  test_constants.py  test_crypto.py  test_datanode.py  test_datasets.py  test_integration.py  test_integration_column_names.py  test_likelihood.py  test_local_node_manager.py  test_mock.py  test_preprocess.py  test_verticox_v6.py
python/verticox/: __init__.py  _version.py  aggregator.py  client.py  common.py  config.py  cross_validation.py  crypto.py  datanode.py  datanode_original.py  datasets.py  defaults.py  encryption.py  likelihood.py  likelihood_n_party.py  likelihood_n_party_2.py  node_manager.py  preprocess.py  scalarproduct.py  ssl.py  vantage6.py
python/verticox/grpc/: datanode_pb2.py  datanode_pb2_grpc.py
python/verticox/resources/: seer_shuffle.txt
(+94 files in other folders)
