[tool.poetry]
name = "verticox"
version = "0.1.0"
description = "Python implementation of the Verticox algorithm."
authors = ["Djura Smits <djura.smits@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
numpy = "^1.22.2"
pandas = "^1.4.1"
scikit-survival = "^0.17.0"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"
grpcio = "^1.46.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
grpcio-tools = "^1.46.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
