[tool.poetry]
name = "verticox"
version = "0.0.0"
description = "Python implementation of the Verticox algorithm."
authors = ["Djura Smits <djura.smits@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
pandas = "^1.4.1"
scikit-survival = "^0.17.0"
scikit-learn = "^1.0.2"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"
grpcio = "^1.46.3"
vantage6-client = "3.2.0"
protobuf = "3.20.1"
numba = "^0.56.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
grpcio-tools = "^1.46.3"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
flake8 = "^4.0.1"
jupyterlab = "^3.4.4"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v --log-level=INFO --log-file=test.log"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
