[project]
name = "verticox"
version = "0.0.0"
description = "Python implementation of the Verticox algorithm."
authors = [{ email = "djura.smits@gmail.com", name = "Djura Smits" },
    { email = "f.vandaalen@maastrichtuniversity.nl", name = "Florian van Daalen" }]
license = "Apache-2.0"
requires-python = "== 3.10.*"
dependencies = [
    "numpy==1.22.2",
    "pandas>=1.5.0",
    "scikit-survival",
    "scikit-learn==1.0.2",
    "Flask==2.3.3",
    "Flask-RESTful==0.3.10",
    "grpcio==1.70.0",
    "vantage6-client==4.7.1",
    "protobuf==3.20.1",
    "numba==0.56.0",
    "pyarrow==12.0.1",
    "fastparquet==2023.10.1",
    "clize==5.0.2",
    "vantage6-algorithm-tools==4.7.1",
    "psutil==6.0.0"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "black",
    "pre-commit==3.3.3",
    "docker==7.1.0",
    "python-on-whales",
    "Jinja2",
    "vantage6==4.7.1",
    "mkdocs==1.6.1"
]

[tool.setuptools]
packages = ["verticox"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v --log-level=INFO --log-file=test.log"


